// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Institution name: NYU renders NYU page correctly 1`] = `
<DocumentFragment>
  <nav
    class="color-nav navbar navbar-expand-lg navbar-light"
  >
    <div
      class="container"
    >
      <button
        aria-controls="basic-navbar-nav"
        aria-label="Toggle navigation"
        class="navbar-toggler collapsed"
        type="button"
      >
        <span
          class="navbar-toggler-icon"
        />
      </button>
      <div
        class="navbar-collapse collapse"
        id="basic-navbar-nav"
      >
        <div
          class="me-auto navbar-nav"
        >
          <a
            class="nav-link"
            data-rr-ui-event-key="http://library.nyu.edu"
            href="http://library.nyu.edu"
          >
            <img
              alt="NYU Libraries logo"
              class="image"
              height="60"
              src="https://cdn.library.nyu.edu/images/nyulibraries-logo.svg"
              width="220"
            />
          </a>
        </div>
      </div>
    </div>
  </nav>
</DocumentFragment>
`;

exports[`Institution name: NYU renders correctly 1`] = `
<DocumentFragment>
  <nav
    class="color-nav navbar navbar-expand-lg navbar-light"
  >
    <div
      class="container"
    >
      <button
        aria-controls="basic-navbar-nav"
        aria-label="Toggle navigation"
        class="navbar-toggler collapsed"
        type="button"
      >
        <span
          class="navbar-toggler-icon"
        />
      </button>
      <div
        class="navbar-collapse collapse"
        id="basic-navbar-nav"
      >
        <div
          class="me-auto navbar-nav"
        >
          <a
            class="nav-link"
            data-rr-ui-event-key="https://nyuad.nyu.edu/en/library.html"
            href="https://nyuad.nyu.edu/en/library.html"
          >
            <img
              alt="NYU Libraries logo"
              class="image white-bg"
              height="60"
              src="/images/abudhabi-logo-color.svg"
              width="220"
            />
          </a>
        </div>
      </div>
    </div>
  </nav>
</DocumentFragment>
`;

exports[`Institution name: NYUAD renders NYUAD page correctly 1`] = `
<DocumentFragment>
  <nav
    class="color-nav navbar navbar-expand-lg navbar-light"
  >
    <div
      class="container"
    >
      <button
        aria-controls="basic-navbar-nav"
        aria-label="Toggle navigation"
        class="navbar-toggler collapsed"
        type="button"
      >
        <span
          class="navbar-toggler-icon"
        />
      </button>
      <div
        class="navbar-collapse collapse"
        id="basic-navbar-nav"
      >
        <div
          class="me-auto navbar-nav"
        >
          <a
            class="nav-link"
            data-rr-ui-event-key="https://nyuad.nyu.edu/en/library.html"
            href="https://nyuad.nyu.edu/en/library.html"
          >
            <img
              alt="NYU Libraries logo"
              class="image white-bg"
              height="60"
              src="/images/abudhabi-logo-color.svg"
              width="220"
            />
          </a>
        </div>
      </div>
    </div>
  </nav>
</DocumentFragment>
`;

exports[`Institution name: NYUAD renders correctly 1`] = `
<DocumentFragment>
  <nav
    class="color-nav navbar navbar-expand-lg navbar-light"
  >
    <div
      class="container"
    >
      <button
        aria-controls="basic-navbar-nav"
        aria-label="Toggle navigation"
        class="navbar-toggler collapsed"
        type="button"
      >
        <span
          class="navbar-toggler-icon"
        />
      </button>
      <div
        class="navbar-collapse collapse"
        id="basic-navbar-nav"
      >
        <div
          class="me-auto navbar-nav"
        >
          <a
            class="nav-link"
            data-rr-ui-event-key="https://nyuad.nyu.edu/en/library.html"
            href="https://nyuad.nyu.edu/en/library.html"
          >
            <img
              alt="NYU Libraries logo"
              class="image white-bg"
              height="60"
              src="/images/abudhabi-logo-color.svg"
              width="220"
            />
          </a>
        </div>
      </div>
    </div>
  </nav>
</DocumentFragment>
`;

exports[`Institution name: NYUSH renders NYUSH page correctly 1`] = `
<DocumentFragment>
  <nav
    class="color-nav navbar navbar-expand-lg navbar-light"
  >
    <div
      class="container"
    >
      <button
        aria-controls="basic-navbar-nav"
        aria-label="Toggle navigation"
        class="navbar-toggler collapsed"
        type="button"
      >
        <span
          class="navbar-toggler-icon"
        />
      </button>
      <div
        class="navbar-collapse collapse"
        id="basic-navbar-nav"
      >
        <div
          class="me-auto navbar-nav"
        >
          <a
            class="nav-link"
            data-rr-ui-event-key="https://shanghai.nyu.edu/academics/library"
            href="https://shanghai.nyu.edu/academics/library"
          >
            <img
              alt="NYU Libraries logo"
              class="image white-bg"
              height="60"
              src="/images/shanghai-logo-color.svg"
              width="220"
            />
          </a>
        </div>
      </div>
    </div>
  </nav>
</DocumentFragment>
`;

exports[`Institution name: NYUSH renders correctly 1`] = `
<DocumentFragment>
  <nav
    class="color-nav navbar navbar-expand-lg navbar-light"
  >
    <div
      class="container"
    >
      <button
        aria-controls="basic-navbar-nav"
        aria-label="Toggle navigation"
        class="navbar-toggler collapsed"
        type="button"
      >
        <span
          class="navbar-toggler-icon"
        />
      </button>
      <div
        class="navbar-collapse collapse"
        id="basic-navbar-nav"
      >
        <div
          class="me-auto navbar-nav"
        >
          <a
            class="nav-link"
            data-rr-ui-event-key="https://nyuad.nyu.edu/en/library.html"
            href="https://nyuad.nyu.edu/en/library.html"
          >
            <img
              alt="NYU Libraries logo"
              class="image white-bg"
              height="60"
              src="/images/abudhabi-logo-color.svg"
              width="220"
            />
          </a>
        </div>
      </div>
    </div>
  </nav>
</DocumentFragment>
`;

exports[`renders correctly 1`] = `
<DocumentFragment>
  <nav
    class="color-nav navbar navbar-expand-lg navbar-light"
  >
    <div
      class="container"
    >
      <button
        aria-controls="basic-navbar-nav"
        aria-label="Toggle navigation"
        class="navbar-toggler collapsed"
        type="button"
      >
        <span
          class="navbar-toggler-icon"
        />
      </button>
      <div
        class="navbar-collapse collapse"
        id="basic-navbar-nav"
      >
        <div
          class="me-auto navbar-nav"
        >
          <a
            class="nav-link"
            data-rr-ui-event-key="http://library.nyu.edu"
            href="http://library.nyu.edu"
          >
            <img
              alt="NYU Libraries logo"
              class="image"
              height="60"
              src="https://cdn.library.nyu.edu/images/nyulibraries-logo.svg"
              width="220"
            />
          </a>
        </div>
      </div>
    </div>
  </nav>
</DocumentFragment>
`;
